compatibility problem fixed